--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{ site.remote-theme }}";
+@import "{{ site.theme }}";
 .header__logo .header__logo--container{
   width: 180px;
   font-size: 1.5em;
