--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
      <meta name="msapplication-config" content="/assets/img/icons/browserconfig.xml?v=qA3OXqyw77">
      <meta name="theme-color" content="#ffffff">
 
-     <link rel="preload" href="/assets/css/main.css" as="style" onload="this.rel='stylesheet'">
-     <noscript><link rel="stylesheet" href="/assets/css/main.css"></noscript>
+     <link rel="preload" href="/assets/css/style.css" as="style" onload="this.rel='stylesheet'">
+     <noscript><link rel="stylesheet" href="/assets/css/style.css"></noscript>
      <script type="text/javascript"> /*! loadCSS. [c]2017 Filament Group, Inc. MIT License */ (function(w){"use strict";if(!w.loadCSS){w.loadCSS=function(){}} var rp=loadCSS.relpreload={};rp.support=(function(){var ret;try{ret=w.document.createElement("link").relList.supports("preload")}catch(e){ret=!1} return function(){return ret}})();rp.bindMediaToggle=function(link){var finalMedia=link.media||"all";function enableStylesheet(){link.media=finalMedia} if(link.addEventListener){link.addEventListener("load",enableStylesheet)}else if(link.attachEvent){link.attachEvent("onload",enableStylesheet)} setTimeout(function(){link.rel="stylesheet";link.media="only x"});setTimeout(enableStylesheet,3000)};rp.poly=function(){if(rp.support()){return} var links=w.document.getElementsByTagName("link");for(var i=0;i<links.length;i++){var link=links[i];if(link.rel==="preload"&&link.getAttribute("as")==="style"&&!link.getAttribute("data-loadcss")){link.setAttribute("data-loadcss",!0);rp.bindMediaToggle(link)}}};if(!rp.support()){rp.poly();var run=w.setInterval(rp.poly,500);if(w.addEventListener){w.addEventListener("load",function(){rp.poly();w.clearInterval(run)})}else if(w.attachEvent){w.attachEvent("onload",function(){rp.poly();w.clearInterval(run)})}} if(typeof exports!=="undefined"){exports.loadCSS=loadCSS} else{w.loadCSS=loadCSS}}(typeof global!=="undefined"?global:this)) </script>
   </head>
   <body class="site">
@@ -59,7 +59,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <nav class="social"> </nav> <span>&copy; 2018 regiovision. All rights reserved.</span> </div>
+        <nav class="social"> </nav> <span class="reserved">&copy; 2018 regiovision. All rights reserved.</span> </div>
     </footer> <script async src="/assets/js/bundle.js"></script>
   </body>
 </html>
