--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -24,7 +24,9 @@
     background: rgba(52, 56, 81, .8);
   }
 }
-
+.hero__home::before{
+    background: rgba(52, 56, 81, 0);
+  }
 .hero--small {
   margin: 3.75rem auto 0;
   min-height: 8.75rem;
