add noindex for layout "page" -> avoid indexing of Vorstand names

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: compress
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-US" }}">
 
-  {% include head.html %}
+  {% include head_noindex.html %}
 
   <body class="site">
 
